# EPX-CORE

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
cmake/: FindSodium.cmake  epxConfig.cmake.in
docs/: ROADMAP_V2.md  SERIALIZATION.md  SPEC.md  VERIFICATION_NOTES.md
examples/: CMakeLists.txt  chat.cpp  chat_c.c  client_demo.cpp  client_demo_c.c  expose_demo.cpp  expose_demo_c.c  groupchat.cpp  groupchat_common.hpp  groupchat_room.cpp  polychat.cpp  polychat_c.c
examples/flatbuffers_demo/: search.fbs  search_client.py  search_generated.h  search_host.cpp
examples/flatbuffers_demo/epxdemo/: SearchRequest.py  SearchResponse.py  SearchResult.py
include/epx/: epx.hpp  epx_c.h  version.hpp.in
packaging/homebrew/: epx.rb
src/: c_api.cpp  client.cpp  credentials.cpp  credentials.hpp  crypto.cpp  crypto.hpp  framing.cpp  framing.hpp  handshake.cpp  handshake.hpp  host.cpp  identity.cpp  init.cpp  init.hpp  keystore.cpp  keystore.hpp  paths.hpp  paths_posix.cpp  paths_win.cpp  protocol.cpp  protocol.hpp  registry.cpp  registry.hpp  transport.hpp  transport_posix.cpp  transport_win.cpp
tests/: CMakeLists.txt  test_access.cpp  test_c_api.c  test_lifecycle.cpp  test_limits.cpp  test_protocol.cpp  test_registry.cpp  test_rotation.cpp  test_shutdown_hooks.cpp  test_streaming.cpp  test_topic.cpp  test_util.hpp
tools/: epx_cli.cpp  polychat_showcase.sh
